<resources>
    <string name="app_name">Admin Business Analysis</string>
    <string name="home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_user_outlet">Create User Outlet</string>
    <string name="user_name">User Name</string>
    <string name="contact">Contact</string>
    <string name="outlet">Outlet Name</string>
    <string name="address">Address</string>
    <string name="pincode">Pin Code</string>
    <string name="add_user">Add User</string>
    <string name="admin_code">Admin Code</string>
</resources>
